--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
+    "@types/estree": "^1.0.5",
     "@types/node": "20.14.1",
     "@types/react": "18.3.3",
     "@types/react-dom": "^18",
+    "@types/resolve": "^1.20.6",
+    "@types/trusted-types": "^2.0.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
